# resolutiongit

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  download-dataset.sh  info.json  nginx.conf  payload.json
.github/workflows/: debug.yml  publish.yml
src/: dataset.rs  main.rs  vectorize.rs
